# wowlab

./: .dockerignore  .gitignore  .gitmodules  .prettierignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.yaml  CLAUDE.md  CLEANUP.md  README.md  REALTIME_ARCHITECTURE.md  REALTIME_ARCHITECTURE_V2.md  ROTATION-API-MAPPING.md  ROTATION-API.md  ROTATION-EDITOR-BROKEN.md  SIMC-API-ANALYSIS.md  TALENT_DATA_FLOW_REPORT.md  TALENT_DISCREPANCIES.md  TODO.md  eslint.config.mjs  package.json  player.cpp  pnpm-lock.yaml  pnpm-workspace.yaml  simc_talent_trace.md  staged-files.txt  talents.md  tsconfig.base.json  vite.config.shared.ts
crates/: .dockerignore  Cargo.toml
crates/api/: Cargo.toml
crates/api/src/: client.rs  game_cache.rs  queries.rs  retry.rs
crates/api/tests/: integration.rs  unit_tests.rs
crates/bench-engine/: Cargo.toml  profile.py  run_benchmarks.sh
crates/bench-engine/src/: main.rs
crates/bench-jsonlogic/: Cargo.toml
crates/bench-jsonlogic/benches/: jsonlogic.rs
crates/bench-jsonlogic/src/: lib.rs
crates/bench-luau/: Cargo.toml
crates/bench-luau/src/: main.rs
crates/bench-rhai/: Cargo.toml
crates/bench-rhai/src/: main.rs
crates/bench-wasmtime/: Cargo.toml
crates/bench-wasmtime/src/: main.rs
crates/centrifuge/: Cargo.toml  build.rs
crates/centrifuge/src/: backoff.rs  client.rs  codes.rs  error.rs  lib.rs  presence.rs  subscription.rs  token.rs  transport.rs  types.rs
crates/centrifuge/src/proto/: client.proto
crates/centrifugo/: Cargo.toml  build.rs
crates/centrifugo/src/: api.rs  client.rs  error.rs  events.rs  lib.rs
crates/centrifugo/src/proto/: centrifugo.proto
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: mod.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  wasm.rs
crates/common/src/parsers/: crypto.rs  errors.rs  mod.rs
crates/common/src/stats/: mod.rs  summary.rs  tests.rs
crates/common/src/types/: mod.rs  spell_desc.rs
crates/discord/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/discord/src/: bloom.rs  discord.rs  filter_refresh.rs  main.rs  meta.rs
crates/discord/src/commands/: general.rs  info.rs  mod.rs
crates/engine/: CLAUDE.md  Cargo.toml  README.md  profile.py  run_5k.sh  run_benchmarks.sh  viewer.html
crates/engine/.cargo/: config.toml
crates/engine/data/tuning/: bm_hunter.toml  hunter.toml
crates/engine/docs/: api_reference.md  architecture-redesign.md  bm-hunter-gap-analysis.md  bm-hunter-simc-comparison.md  optimization_guide.md  paperdoll-implementation-plan.md  paperdoll-technical-spec.md  rotation-architecture-v2.md  simc-apl-features.md
crates/engine/docs/refactoring/: 00-overview.md  01-duplicate-aura-apply-remove.md  02-duplicate-damage-calculation.md  03-duplicate-rating-stat-computation.md  04-duplicate-pettype-enum.md  05-duplicate-attribute-match.md  06-incomplete-coefficient-coverage.md  07-missing-talent-proc-system.md  08-missing-pet-ability-system.md  09-rigid-spell-effect-enum.md  10-no-mastery-formula-differentiation.md  11-silent-failures-aura-tracker.md  12-string-errors-in-cli.md  13-unchecked-array-indexing.md  14-validation-gaps-parallel-paths.md  15-cast-truncation-without-guards.md  16-string-matching-instead-of-enums.md  17-missing-newtype-wrappers.md
crates/engine/rotations/: bm_hunter.json  bm_hunter.rhai  bm_st.rhai  bm_test.rhai  mm_hunter.rhai
crates/engine/scripts/: profile.py  run_5k.sh  run_benchmarks.sh  run_profiler.sh
crates/engine/specs/hunter/: beast-mastery.toml
crates/engine/src/: lib.rs  main.rs  prelude.rs  script.rs  wasm_exports.rs
crates/engine/src/actor/: enemy.rs  mod.rs  pet.rs  player.rs  tests.rs
crates/engine/src/aura/: instance.rs  (+4 more)
crates/engine_new/: Cargo.toml
crates/engine_new/src/: lib.rs  main.rs  prelude.rs
crates/node/: CLAUDE.md  Cargo.toml
crates/node-core/: Cargo.toml
crates/node-core/src/: core.rs  lib.rs
crates/node-core/tests/: engine_integration.rs
crates/node-gui/: CLAUDE.md  Cargo.toml
crates/node-gui/src/: app.rs  main.rs
crates/node-headless/: CLAUDE.md  Cargo.toml  Dockerfile
crates/node-headless/src/: main.rs
crates/node/src/: app.rs  auth.rs  cache.rs  claim.rs  config.rs  core.rs  lib.rs  logging.rs  main.rs  queries.rs  realtime.rs  sentinel.rs  update.rs
crates/node/tests/: backoff.rs  engine_integration.rs
crates/parsers/: Cargo.toml
crates/parsers/src/: errors.rs  lib.rs  types.rs
crates/parsers/tests/: loadout_snapshots.rs  simc_snapshots.rs  spell_desc.rs
crates/poc/: CLAUDE.md  Cargo.toml
crates/poc/src/: action.rs  compiler.rs  eval.rs  lib.rs  main.rs  preprocess.rs  schema.rs
crates/rotation-bench/: Cargo.toml
crates/rotation-bench/benches/: rotation.rs
crates/rotation-bench/src/: bytecode_vm.rs  cranelift_jit.rs  decision_tree.rs  lib.rs  lookup_table.rs  native_enum.rs  rhai_baseline.rs  state.rs
crates/rotation-wasm/: Cargo.toml
crates/rotation-wasm/src/: lib.rs
crates/sentinel/: .env.example  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fly.toml
crates/sentinel/scripts/: run.sh
crates/sentinel/src/: config.rs  lib.rs  main.rs  presence.rs  state.rs  telemetry.rs
crates/sentinel/tests/: assign.rs  bloom.rs  embed.rs
crates/server/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml  fly.toml
crates/server/src/: lib.rs  main.rs  state.rs
crates/server/tests/: bloom.rs
crates/snapshot-parser/: Cargo.toml  test-talents.sh
crates/snapshot-parser/src/: errors.rs  lib.rs
crates/snapshot-parser/tests/: integration_tests.rs  snapshots_test.rs
crates/supabase/: Cargo.toml
crates/supabase-client/: Cargo.toml
crates/supabase-client/src/: cache.rs  client.rs  disk_cache.rs  errors.rs  game_cache.rs  lib.rs  queries.rs  retry.rs
crates/supabase-client/tests/: integration.rs  unit_tests.rs
crates/supabase/src/: client.rs  errors.rs  lib.rs  realtime.rs
crates/supabase/tests/: unit_tests.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs  spell_desc.rs
crates/wowlab-node/: Cargo.toml
crates/wowlab-node/src/: app.rs  claim.rs  main.rs
(+3184 files in other folders)
