[workspace]
resolver = "2"
members = [
    "cli",
    "engine",
    "node",
    "node-gui",
    "node-headless",
    "parsers",
    "supabase-client",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["wowlab"]
repository = "https://github.com/legacy3/wowlab"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = 3

# For profiling (no LTO for symbol resolution)
[profile.bench-profile]
inherits = "release"
debug = "line-tables-only"
lto = false
codegen-units = 16
