[workspace]
resolver = "2"
members = [
    "api",
    "cli",
    "engine",
    "node",
    "node-gui",
    "node-headless",
    "parsers",
    "sentinel",
    "types",
]

[workspace.package]
version = "0.4.1"
edition = "2021"
authors = ["wowlab"]
repository = "https://github.com/legacy3/wowlab"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = 3

# For profiling (no LTO for symbol resolution)
[profile.bench-profile]
inherits = "release"
debug = "line-tables-only"
lto = false
codegen-units = 16
