[workspace]
resolver = "2"
members = [
    "centrifuge",
    "cli",
    "common",
    "engine",
    "node",
    "node-gui",
    "node-headless",
    "sentinel",
    "supabase",
]

[workspace.package]
version = "0.4.1"
edition = "2021"
authors = ["wowlab"]
repository = "https://github.com/legacy3/wowlab"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release.package."*"]
opt-level = 3
codegen-units = 1

# For profiling (no LTO for symbol resolution)
[profile.bench-profile]
inherits = "release"
debug = "line-tables-only"
lto = false
codegen-units = 16

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
all = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
too_many_lines = "allow"
