[package]
name = "wowlab-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Data access layer for wowlab (Supabase client)"

[dependencies]
wowlab-types = { path = "../types" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
urlencoding = "2"
backoff = { version = "0.4", features = ["tokio"] }
moka = { version = "0.12", features = ["sync"] }
directories = "5"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
