[package]
name = "bench-jsonlogic"
version = "0.1.0"
edition = "2021"

[dependencies]
# datalogic-rs v3 (arena-based, max perf)
datalogic-v3 = { package = "datalogic-rs", version = "3" }
# datalogic-rs v4 (ergonomic API)
datalogic-v4 = { package = "datalogic-rs", version = "4" }

# Rhai - embedded scripting language
rhai = "1.23.6"

# Wasmtime - WebAssembly runtime
wasmtime = "40.0.1"

# Cranelift - JIT compiler (direct, no WASM overhead)
cranelift = "0.116"
cranelift-jit = "0.116"
cranelift-module = "0.116"
cranelift-native = "0.116"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "jsonlogic"
harness = false
