[package]
name = "bench-rhai"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bench-rhai"
path = "src/main.rs"

[dependencies]
rhai = { version = "1.20", features = [
    "unchecked",      # Disable safety checks for max speed
    "no_closure",     # No closures = no locking overhead
    "no_module",      # No module loading
    "no_custom_syntax",
    "only_i32",       # Single integer type (smaller Dynamic)
    "f32_float",      # 32-bit floats (smaller Dynamic)
] }
