[package]
name = "wowlab-centrifuge"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Centrifugo client for Rust"

[dependencies]
# WebSocket
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
futures-util = "0.3"

# Async runtime
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Protocol
prost = "0.14"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP (for presence API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1" }

# Utilities
thiserror = "2"
tracing = "0.1"
rand = "0.8"

[build-dependencies]
prost-build = "0.14"
