[package]
name = "wowlab-centrifugo"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Centrifugo client for WoW Lab"

[dependencies]
# WebSocket
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# Async runtime
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Protocol
prost = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP API
reqwest = { version = "0.12", features = ["json"] }

# Utilities
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[build-dependencies]
prost-build = "0.13"
