[package]
name = "wowlab-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "wowlab"
path = "src/main.rs"

[dependencies]
parsers = { path = "../parsers" }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
serde = "1"
serde_json = "1"
dotenvy = "0.15"
