[package]
name = "wowlab-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared types, parsers, and statistics for wowlab"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["dep:tsify-next", "dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:js-sys"]
crypto = ["dep:ed25519-dalek", "dep:sha2", "dep:rand"]
dbc = ["dep:csv"]
full = ["crypto", "dbc"]

[dependencies]
# Core
serde = { version = "1", features = ["derive"] }
bitflags = { version = "2", features = ["serde"] }
thiserror = "2"

# Parsing (always needed for parsers module)
logos = "0.16"
data-encoding = "2"
itertools = "0.14"
tracing = "0.1"
serde_json = "1"

# WASM (optional)
tsify-next = { version = "0.5", optional = true, features = ["js"] }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
js-sys = { version = "0.3", optional = true }

# Crypto (optional - for node auth)
ed25519-dalek = { version = "2", optional = true, features = ["rand_core"] }
sha2 = { version = "0.10", optional = true }
rand = { version = "0.8", optional = true }

# DBC loading (optional - for CLI tools)
csv = { version = "1.3", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
pretty_assertions = "1"
insta = { version = "1", features = ["json"] }
