[package]
name = "wowlab-discord"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "WoW Lab Discord bot"

[[bin]]
name = "wowlab-discord"
path = "src/main.rs"

[dependencies]
# Framework
poise = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "signal"] }

# Wowlab crates
wowlab-parsers = { path = "../parsers", default-features = false, features = [] }
wowlab-api = { path = "../api" }

# Serialization
serde = { version = "1", features = ["derive"] }

# Bloom filter
sha2 = "0.10"
base64 = "0.22"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
dotenvy = "0.15"
