[package]
name = "engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "engine"
path = "src/main.rs"

[dependencies]
bitflags = "2"
clap = { version = "4", features = ["derive"] }
console = "0.15"
indicatif = "0.17"
rhai = { version = "1", features = ["sync", "internals"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
statrs = "0.18"
tabled = { version = "0.15", features = ["std"] }
toml = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"

[dev-dependencies]
