[package]
name = "engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "engine"
path = "src/main.rs"

[dependencies]
bitflags = "2"
clap = { version = "4", features = ["derive"] }
console = "0.15"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
statrs = "0.18"
tabled = { version = "0.15", features = ["std"] }
toml = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
thiserror = "2"

# Cranelift JIT
cranelift = "0.127.1"
cranelift-jit = "0.127.1"
cranelift-module = "0.127.1"
cranelift-native = "0.127.1"

# Parallelism & Performance
rayon = "1.10"
num_cpus = "1.16"
parking_lot = "0.12"

# Fast RNG and data structures
fastrand = "2"
ahash = "0.8"
smallvec = "1"

# Fast allocator (significant speedup for clone-heavy workloads)
mimalloc = { version = "0.1", default-features = false }

[dev-dependencies]
