[package]
name = "engine_new"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "engine"
path = "src/main.rs"

[dependencies]
bitflags = "2"
rhai = { version = "1", features = ["sync", "internals"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
