[package]
name = "node-gui"
version = "0.2.4"
edition = "2021"
description = "GUI for WoW Lab distributed simulation node"

[[bin]]
name = "node-gui"
path = "src/main.rs"

[dependencies]
node = { path = "../node" }
eframe = "0.29"
egui = "0.29"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
image = { version = "0.25", default-features = false, features = ["png"] }
lucide-icons = "0.562"
open = "5"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4.5", features = ["derive"] }
