[package]
name = "wowlab-node-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "GUI for WoW Lab distributed simulation node"

[[bin]]
name = "node-gui"
path = "src/main.rs"

[dependencies]
wowlab-node = { path = "../node" }
eframe = "0.29"
egui = "0.29"
egui-notify = "0.17"
egui-modal = "0.5"
egui_virtual_list = "0.5"
egui_plot = "0.29"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
image = { version = "0.25", default-features = false, features = ["png"] }
lucide-icons = "0.562"
open = "5"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4.5", features = ["derive"] }
mimalloc = "0.1"
