[package]
name = "node-headless"
version = "0.3.0"
edition = "2021"
description = "Headless WoW Lab simulation node for servers"

[[bin]]
name = "node-headless"
path = "src/main.rs"

[dependencies]
node = { path = "../node" }
tokio = { version = "1", features = ["full", "signal"] }
tracing = "0.1"
clap = { version = "4.5", features = ["derive"] }

# Signal handling (supports SIGTERM for containers)
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
tokio-stream = "0.1"
