[package]
name = "node"
version = "0.1.0"
edition = "2021"
description = "Distributed simulation node for WowLab"

[[bin]]
name = "node"
path = "src/main.rs"

[dependencies]
eframe = "0.29"
egui = "0.29"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
supabase-realtime-rs = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = { version = "0.14", features = ["ini"] }
directories = "5"
uuid = { version = "1", features = ["v4", "serde"] }
hostname = "0.4"
num_cpus = "1.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "2.0"
open = "5"
image = { version = "0.25", default-features = false, features = ["png"] }
lucide-icons = "0.562"

[profile.release]
opt-level = 3
lto = true
