[package]
name = "parsers"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Parsers for WoW-related data formats"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
logos = "0.16"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tsify-next = { version = "0.5", features = ["js"] }
wasm-bindgen = "0.2"

[dev-dependencies]
pretty_assertions = "1"
