[package]
name = "wowlab-parsers"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Parsers for WoW-related data formats (SimC profiles, DBC CSV, talent loadouts)"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wowlab-types/wasm"]

[dependencies]
# Core types
wowlab-types = { path = "../types" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Parsing
csv = "1.3"
logos = "0.16"
data-encoding = "2"
itertools = "0.14"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

# WASM bindings
tsify-next = { version = "0.5", features = ["js"] }
wasm-bindgen = "0.2"

[dev-dependencies]
pretty_assertions = "1"
insta = { version = "1", features = ["json"] }
