[package]
name = "wowlab-parsers"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Parsers for WoW-related data formats (SimC profiles, DBC CSV, talent loadouts)"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm"]
wasm = ["wowlab-types/wasm"]

[dependencies]
# Core types
wowlab-types = { path = "../types" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Parsing
csv = "1.3"
logos = "0.16"
data-encoding = "2"
itertools = "0.14"

# Error handling
thiserror = "2"

# Crypto (node authentication)
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"

# Logging
tracing = "0.1"

# WASM bindings
tsify-next = { version = "0.5", features = ["js"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"

# WASM target-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
pretty_assertions = "1"
insta = { version = "1", features = ["json"] }
