[package]
name = "rotation-bench"
version = "0.1.0"
edition = "2021"
description = "Benchmarks for rotation scripting approaches"

[lib]
path = "src/lib.rs"

[[bench]]
name = "rotation"
harness = false

[dependencies]
# For Rhai baseline
rhai = { version = "1", features = ["sync", "internals"] }

# For LuaJIT comparison (optional, enable with feature)
mlua = { version = "0.10", features = ["luajit", "vendored"], optional = true }

# Cranelift JIT
cranelift = "0.116"
cranelift-jit = "0.116"
cranelift-module = "0.116"
cranelift-native = "0.116"
target-lexicon = "0.13"

# Utilities
bitvec = "1"
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
luajit = ["mlua"]
