[package]
name = "wowlab-sentinel"
version = "0.5.1"
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "WoW Lab sentinel: Discord bot + chunk scheduler + status HTTP"

[lib]
name = "wowlab_sentinel"
path = "src/lib.rs"

[[bin]]
name = "wowlab-sentinel"
path = "src/main.rs"

[dependencies]
# Framework
poise = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "signal"] }

# HTTP
axum = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Bloom filter
sha2 = "0.10"

# Types
uuid = { version = "1", features = ["serde"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

[dev-dependencies]
base64 = "0.22"
