[package]
name = "wowlab-server"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "WoW Lab server: Discord bot + chunk scheduler"

[lib]
name = "wowlab_server"
path = "src/lib.rs"

[[bin]]
name = "wowlab-server"
path = "src/main.rs"

[dependencies]
# Framework
poise = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "signal"] }

# Wowlab crates
wowlab-api = { path = "../api" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Bloom filter
sha2 = "0.10"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

[dev-dependencies]
base64 = "0.22"
