[package]
name = "snapshot-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
thiserror = "2"
tracing = "0.1"
data-encoding = "2"
itertools = "0.14"

[dev-dependencies]
insta = { version = "1", features = ["json"] }
