[package]
name = "supabase-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
snapshot-parser = { path = "../snapshot-parser" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
dashmap = "6"
urlencoding = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
