[package]
name = "wowlab-supabase"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Generic Supabase client (PostgREST)"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
backoff = { version = "0.4", features = ["tokio"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
