[package]
name = "wowlab-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core type definitions for wowlab - shared across WASM and native targets"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["dep:tsify-next", "dep:wasm-bindgen", "dep:serde-wasm-bindgen"]

[dependencies]
serde = { version = "1", features = ["derive"] }
bitflags = { version = "2", features = ["serde"] }

# WASM bindings (optional)
tsify-next = { version = "0.5", optional = true, features = ["js"] }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
